fix(app): macos compatability fix